--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,233 @@
-blockquote {
-  font-style: italic
+/*****************************************/
+/* FUENTES    */
+/*****************************************/
+
+@font-face {
+  font-family: "AmpleSoft Bold";
+  src: url("https://e-commerce.payulatam.com/hubfs/Storage/Font/AmpleSoft%20Bold.otf");
 }
 
-h1, h2, h3, h4, h5, p, li, text
+@font-face {
+  font-family: "AmpleSoft";
+  src: url("https://e-commerce.payulatam.com/hubfs/Storage/Font/AmpleSoft.otf");
+}
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+/*****************************************/
+/* ESTILOS GENERALES    */
+/*****************************************/
+
+body
 {
-    font-family:'Open Sans';
+font-family: "AmpleSoft" !important;
+background-color: #F8F7FC;
 }
 
+h1
+{
+  font-family: "AmpleSoft" !important;
+
+}
+h2,h3,h4,h5,h6
+{
+
+text-align: center;
+font-family: "AmpleSoft";
+font-weight: bold;
+}
+
+
+
+/*****************************************/
+/* HEADER    */
+/*****************************************/
+
+
+
+/*este css ajusta la vista del html producido por R markdown*/
+
+/*pone la barra de navegacion como transparente*/
+/*Le da un espacio arriba a la barra (diseño)*/
+#navbar.navbar-collapse 
+{
+background: transparent;
+    padding-top: 70px;
+}
+
+/*pone la barra de navegacion como transparente*/
+/* agrega el fondo fijo a la barra */
+.navbar 
+{
+background: transparent;
+position: fixed;
+
+background-image: url(../img/fondoHeader.png);
+min-width: 100vw;
+background-size: cover;
+background-color: white;
+}
+
+/*subraya la seccion activa del doc en la barra de navegacion*/
+li.active 
+{
+/* border-bottom: 1px solid black; */
+text-decoration: underline;
+}
+
+
+/*Agrega el logo de payu a la barra superrior*/
+a.navbar-brand:after 
+
+{
+content: "";
+color: transparent;
+background-image: url('../img/logoPayu.png');
+background-blend-mode: luminosity;
+background-repeat: no-repeat;
+background-color: transparent;
+min-height: 104px;
+min-width: 205px;
+top: 10px;
+left: 78px;
+position: absolute;
+z-index: 1000;
+}
+
+/*le pone un fondo de imagen al header y le ajusta el tamaño*/
+#header 
+{
+text-align: center;
+font-size: 55px;
+color: white;
+left: 0;
+margin: 0;
+/* background-image: url(../img/fondoHeader.png); */
+background-image: url(../img/Geografia-pagos-header.jpg);
+min-width: 100vw;
+min-height: 100vh;
+/* background-size: cover; */
+background-size: contain;
+display: flex;
+/* position: absolute; */
+background-repeat: no-repeat;
+/* margin-top: -51px; */
+}
+
+/* AJusta el contenedor d ela imagen para que no haya bordes ni espacios */
+.container-fluid.main-container {
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
+  max-width: initial;
+}
+
+
+
+/*centra el texto del header dentro de la imagen*/
+#header h1 
+{
+ color: white; 
+margin: auto;
+margin-top: 200px;
+}
+
+
+/*texto en blanco en el header*/
+.navbar-default .navbar-nav>li>a, 
+.navbar.navbar-default .navbar-nav>.active>a
+{
+color: white;
+}
+
+/*linea blanca de bajo del menú, va hasta el border*/
+/*#navbar
+{
+    margin-left: -75px;
+border-bottom: 1px solid white;
+margin-right: -20px;
+padding-right: 20px;
+}*/
+
+/*linea blancla debajo del navbar. Va de lado a lado de la pantalla*/
+.navbar.navbar-default
+{
+border-bottom: 1px solid white;
+}
+
+/*alinea el navbar a la derecha*/
+.navbar-default .container
+{
+margin-right: 215px;
+}
+
+/* ----------------------------------------------------------- */
+@media (max-width: 768px)
+{
+    /* fondo blanco solamente */
+    .navbar 
+    {
+        background-image: none;
+    }
+
+    /* quita el borde del desktop */
+    .navbar-default .container
+    {
+        margin-right: 10px;
+    }
+    /* logo payu movíl */
+    a.navbar-brand:after 
+    {
+        content: "";
+        background-image: url(../img/logoPayuVerde.png);
+        background-repeat: no-repeat;
+        width: 74px;
+        height: 37px;
+        top: 7px;
+        left: 18px;
+        background-size: cover;
+        min-width: 0;
+        min-height: 0;
+    }
+
+        /*color menu hamburguesa*/
+        .navbar-default .navbar-nav>li>a, 
+        .navbar.navbar-default .navbar-nav>.active>a
+        {
+            color: black;
+        }
+
+        /* quita el espacio de arriba del menú movil */
+        #navbar.navbar-collapse
+         {
+            padding-top: 0;
+        }
+    
+}
+
+@media (min-width: 1260px)
+{
+  /* cuando la pantalla es demasiado grande
+   ajusta la imagen para que no se corra */
+  #header
+  {
+    background-position: center;
+    background-size: cover;
+    min-height: 130vh;
+  }
+}
+
+/*****************************************/
+/* CUERPO    */
+/*****************************************/
+
+
+#por-qué-importan-las-transacciones 
+{
+/* margin-top: 600px; */
+}
+
+
+/*****************************************/
+/* COLOMBIA    */
+/*****************************************/
