--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,25 @@ font-weight: bold;
   max-width: initial;
 }
 
-
+.ocultarEnDesktop
+  {
+    display:none !important;
+  }
+  .ocultarEnMovil
+{
+  display:block !important;
+}
+@media (max-width: 768px)
+  {
+    .ocultarEnDesktop
+      {
+        display:block !important; 
+      }
+      .ocultarEnMovil
+      {
+        display:none !important;
+      }
+  }
 
 /*****************************************/
 /* MENÚ    */
