--- a/styles.css
+++ b/styles.css
@@ -345,6 +345,11 @@ quita la transparencia del menu*/
   display: none;
 }
 
+#colombia #titulo
+{
+  margin-bottom: 10%;
+}
+
 
 /*****************************************/
 /* METODOS PAGO    */
