--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,27 @@ font-weight: bold;
 }
 
 
+@media(max-width: 768px)
+{
+  .ocultarEnDesktop
+  {
+    display:block !important; 
+  }
+  .ocultarEnMovil
+  {
+    display:none !important;
+  }
+}
+
+.ocultarEnDesktop
+  {
+    display:none !important;
+  }
+  .ocultarEnMovil
+{
+  display:block !important;
+}
+
 
 /*****************************************/
 /* MENÚ    */
@@ -245,20 +266,21 @@ no se le pone al body pq descuadra el header */
 }
 
 /* Le da el color y la negrilla al título de contenido*/
-#contenido h3{
+#contenido h1{
   font-weight: bolder;
-  color: #757575
+  color: #757575;
+  text-align: center;
 }
 
 /*Determina la organización de los elementos de la lista en un flexbox*/
-#contenido h3+ul{
+#contenido h1+ul{
   display: flex;
   justify-content: space-between;
   list-style: none;
 }
 
 /*Cada uno de los titulos de contenido en el flexbox*/
-#contenido h3+ul li{
+#contenido h1+ul li{
   width: 30%;   
   margin: 8px;
   color: #C4D520;
@@ -267,6 +289,8 @@ no se le pone al body pq descuadra el header */
   padding: 20px;
   font-size: 20px;
 }
+
+
 
 /*****************************************/
 /* Inicio    */
@@ -408,11 +432,10 @@ background-image: url('img/logoPayuVerde.png');
   list-style: none;
 }
 
-
 /*Cada uno de los recuadros de información de métodos de pago*/
 #metodosPago p+p+ul li {
-  width: 30%;  
-  height: 200px;  
+  width: 30%;
+  height: 150px;  
   background-color: #FFFFFF;
   border: 1px solid #ecebef;
   border-radius: 20px;
@@ -420,29 +443,26 @@ background-image: url('img/logoPayuVerde.png');
   padding: 20px
 }
 
-/* Da el color y el grosor del título "Contenido"*/
-#metodosPago #contenido h3{
-  font-weight: bolder;
-  color: #757575
+/*Adaptación a móvil*/
+@media (max-width: 768px)
+{
+  #metodosPago p+p+ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    flex-direction: column;
+  }
+  #metodosPago p+p+ul li {
+    width: 100%;
+    height: 150px;  
+    background-color: #FFFFFF;
+    border: 1px solid #ecebef;
+    border-radius: 20px;
+    margin: 8px;
+    padding: 20px
+  }
 }
 
-/*Crea el formato para poner la lista de contenido en el contenedor*/
-#metodosPago #contenido h3+ul, #Departamentos #contenido h3+ol{
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-}
-
-/*Cada uno de los titulos de contenido en el contenedor*/
-#metodosPago #contenido h3+ul li, #Departamentos #contenido h3+ol li {
-  width: 30%;   
-  margin: 8px;
-  color: #C4D520;
-  text-decoration: underline;
-  justify-content: center;
-  padding: 20px;
-  font-size: 20px;
-}
 
 /* Borde gráficas cuando haya columnas*/
 #metodosPago .columna{
