--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,14 @@ svg.main-svg
   color: #757575;
   text-align: center;
 }
+/* el texto del copyrght al final de todas las páginas */
+.copyright
+{
+  margin-top: 25px;
+    font-size: 10px;
+    padding-left: 50px;
+    opacity: 0.4;
+}
 .ocultarEnDesktop
   {
     display:none !important;
@@ -126,6 +134,16 @@ no se le pone al body pq descuadra el header */
       .ocultarEnMovil
       {
         display:none !important;
+      }
+
+      h2
+      {
+        text-align: center;
+      }
+
+      #contenido ul
+      {
+        display: block;
       }
   }
 /*****************************************/
@@ -167,18 +185,19 @@ text-decoration: underline;
 /*Agrega el logo de payu a la barra superrior*/
 a.navbar-brand:after 
 {
-content: "";
-color: transparent;
-background-image: url('img/logoPayuVerde.png');
-background-blend-mode: luminosity;
-background-repeat: no-repeat;
-background-color: transparent;
-min-height: 104px;
-min-width: 205px;
-top: 10px;
-left: 78px;
-position: absolute;
-z-index: 1000;
+  content: "";
+  color: transparent;
+  background-image: url(img/logoPayuVerde.png);
+  background-blend-mode: luminosity;
+  background-repeat: no-repeat;
+  /* background-color: transparent; */
+  min-height: 85px;
+  min-width: 139px;
+  background-size: contain;
+  top: 28px;
+  left: 78px;
+  position: absolute;
+  z-index: 1000;
 }
 
 
@@ -274,7 +293,7 @@ margin-right: 215px;
 
   min-width: 100vw;
   min-height: 100vh;
-  background-size: contain;
+  background-size: cover;
   display: flex;
   /* position: absolute; */
   background-repeat: no-repeat;
@@ -301,6 +320,17 @@ margin-right: 215px;
   }
 }
 
+@media (max-width: 768px)
+{
+    /* hace que la imagen se acomode a la pantalla  */
+ #header
+    {
+      background-size: contain;
+      /* min-height: auto; */
+    }
+    
+
+}
 
 /*****************************************/
 /* Inicio    */
@@ -314,7 +344,7 @@ margin-right: 215px;
   
 }
 
-/*centra el texto del header dentro de la imagen*/
+/*formatea el texto del header dentro de la imagen*/
 #inicio #header h1 
 {
  color: white; 
@@ -360,7 +390,31 @@ quita la transparencia del menu*/
     box-shadow: 0px 40px 0px -39px white;
     opacity: 1;
 }
+@media (max-width: 768px)
+{
+    /*formatea el texto del header dentro de la imagen*/
+    #inicio #header h1 
+    {
+      margin-top: 24px;
+      font-size: 30px;
+      height: 250px;
+    }
 
+    #inicio h1
+    {
+      font-size: 25px;
+      font-weight: bold;
+    }
+
+    #inicio #header
+    {
+      background-size: contain;
+    min-height: auto;
+    }
+
+   
+
+}
 
 /*****************************************/
 /* COLOMBIA    */
@@ -409,13 +463,6 @@ quita la transparencia del menu*/
 
 
 
-/*Agrega el logo verde de payu a la barra superrior*/
-#metodosPago a.navbar-brand:after 
-
-{
-background-image: url('img/logoPayuVerde.png');
-}
-
 /*centra el texto del header dentro de la imagen*/
 #metodosPago #header h1 
 {
@@ -441,7 +488,7 @@ background-image: url('img/logoPayuVerde.png');
 /*Cada uno de los recuadros de información de métodos de pago*/
 #metodosPago p+p+ul li {
   width: 30%;  
-  height: 200px;  
+  min-height: 200px;  
   background-color: #FFFFFF;
   box-shadow: 0 0 9px 1px #CECDD2;
   border-radius: 20px;
@@ -456,6 +503,24 @@ background-image: url('img/logoPayuVerde.png');
   border-radius: 20px;
 }
 
+
+@media (max-width: 768px)
+  {
+    #metodosPago p+p+ul
+    {
+      display: block;
+    }
+
+    #metodosPago p+p+ul li 
+    {
+      width: auto;
+    }
+
+    #metodosPago p
+    {
+      padding: 0;
+    }
+  }
 /**************************************/
 /*departamentos*/
 /***************************************/
